--- a/components/audio_board/CMakeLists.txt
+++ b/components/audio_board/CMakeLists.txt
@@ -4,6 +4,15 @@ set(COMPONENT_ADD_INCLUDEDIRS ./include)
 set(COMPONENT_REQUIRES )
 set(COMPONENT_PRIV_REQUIRES esp_peripherals audio_sal audio_hal esp_dispatcher display_service)
 
+if (CONFIG_AUDIO_BOARD_CUSTOM)
+message(STATUS "Current board name is " CONFIG_AUDIO_BOARD_CUSTOM)
+list(APPEND COMPONENT_ADD_INCLUDEDIRS ./skoog_8388_v1)
+set(COMPONENT_SRCS
+./skoog_8388_v1/board.c
+./skoog_8388_v1/board_pins_config.c
+)
+endif()
+
 
 if (CONFIG_ESP_LYRAT_V4_2_BOARD)
 message(STATUS "Current board name is " CONFIG_ESP_LYRAT_V4_2_BOARD)
